2002-10-16  Sam Steingold  <sds@gnu.org>

	* realtran.d (F_pi_round_I_F): removed
	(F_pi2_round_I_F): the second (integer) value is taken mod 4
	(cos_stack, sin_stack): new functions
	(R_sin_R, R_cos_R): rewrote to use them

2002-10-16  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Directory shortcuts on win32.
	* pathname.d (FullName): save final slash, respect it.
	(resolve_shell_shortcut): don't call IShellLink->Resolve
	don't need to substitute missing target with any other file.
	Try to use description field on missing symlinks.
	(shell_shortcut_target_t): resolve result enumeration.
	(resolve_shell_shortcut_more): new function - resolve links
	to links, returns target attributes.
	(TrueName): similar to FullName, but tries to resolve every
	pathname component up to filename.
	(resolve_shell_symlink): changed result type, input parameters.
	(assure_dir_exists): split MSDOS and WIN32_NATIVE, the latter
	is rewritten.
	(directory_search_1subdir) [WIN32_NATIVE]: separated from others.
	Uses TrueName to handle links.
	(directory_search_hashcode) [WIN32_NATIVE]: new for win32.
	(directory_search_scandir) [WIN32_NATIVE]: reworked.
	(directory_search) [WIN32_NATIVE]: handle :CIRCLE flag.

2002-10-16  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Fix build for MSVC.
	* win32.d (MyCreateProcess): declare 1st parameter as const
	* win32aux.d (MyCreateProcess): same.
	* stream.d (sock_opt_bool, sock_opt_int, sock_opt_time)
	(SOCKET-OPTIONS): change length parameter of [g|s]etsockopt
	to type int (uint is absent). Cast option to (char *) - as
	declared in winsock (won't hurt (void *) unix declaration).

2002-10-15  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): print help when nothing useful was
	entered (just some whitespace)

2002-10-14  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 598128 ]: values / multiple-value-list crash
	* lispbibl.d (list_to_mv): fixed the check for mv_space overrun
	(mv_to_STACK): check space on STACK beforehand, not post-factum
